// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Status renders correctly with another search type 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Status
    count={20}
    handleSort={[Function]}
    match={
      Object {
        "params": Object {
          "id": "680",
        },
        "url": "/film/680",
      }
    }
    searchType="person"
    sortType=""
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="container"
      >
        <div
          className="count"
        >
          20
           
          people
           found
        </div>
      </div>,
      "id": "status",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="count"
          >
            20
             
            people
             found
          </div>,
          null,
        ],
        "className": "container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              20,
              " ",
              "people",
              " found",
            ],
            "className": "count",
          },
          "ref": null,
          "rendered": Array [
            20,
            " ",
            "people",
            " found",
          ],
          "type": "div",
        },
        null,
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="container"
        >
          <div
            className="count"
          >
            20
             
            people
             found
          </div>
        </div>,
        "id": "status",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="count"
            >
              20
               
              people
               found
            </div>,
            null,
          ],
          "className": "container",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": null,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                20,
                " ",
                "people",
                " found",
              ],
              "className": "count",
            },
            "ref": null,
            "rendered": Array [
              20,
              " ",
              "people",
              " found",
            ],
            "type": "div",
          },
          null,
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Status renders correctly with another sorting type 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Status
    count={20}
    handleSort={[Function]}
    match={
      Object {
        "params": Object {
          "id": "680",
        },
        "url": "/film/680",
      }
    }
    searchType="title"
    sortType="rating"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="container"
      >
        <div
          className="count"
        >
          20
           
          movies
           found
        </div>
        <div
          className="sort"
        >
          <span
            className="sortBy"
          >
            Sort by
          </span>
          <label
            className="link link-default"
          >
            <input
              checked={false}
              onChange={[Function]}
              type="radio"
              value="date"
            />
            release date
          </label>
          <label
            className="link link-primary"
          >
            <input
              checked={true}
              onChange={[Function]}
              type="radio"
              value="rating"
            />
            rating
          </label>
        </div>
      </div>,
      "id": "status",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="count"
          >
            20
             
            movies
             found
          </div>,
          <div
            className="sort"
          >
            <span
              className="sortBy"
            >
              Sort by
            </span>
            <label
              className="link link-default"
            >
              <input
                checked={false}
                onChange={[Function]}
                type="radio"
                value="date"
              />
              release date
            </label>
            <label
              className="link link-primary"
            >
              <input
                checked={true}
                onChange={[Function]}
                type="radio"
                value="rating"
              />
              rating
            </label>
          </div>,
        ],
        "className": "container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              20,
              " ",
              "movies",
              " found",
            ],
            "className": "count",
          },
          "ref": null,
          "rendered": Array [
            20,
            " ",
            "movies",
            " found",
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <span
                className="sortBy"
              >
                Sort by
              </span>,
              <label
                className="link link-default"
              >
                <input
                  checked={false}
                  onChange={[Function]}
                  type="radio"
                  value="date"
                />
                release date
              </label>,
              <label
                className="link link-primary"
              >
                <input
                  checked={true}
                  onChange={[Function]}
                  type="radio"
                  value="rating"
                />
                rating
              </label>,
            ],
            "className": "sort",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": "Sort by",
                "className": "sortBy",
              },
              "ref": null,
              "rendered": "Sort by",
              "type": "span",
            },
            Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <input
                    checked={false}
                    onChange={[Function]}
                    type="radio"
                    value="date"
                  />,
                  "release date",
                ],
                "className": "link link-default",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": null,
                  "nodeType": "host",
                  "props": Object {
                    "checked": false,
                    "onChange": [Function],
                    "type": "radio",
                    "value": "date",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "input",
                },
                "release date",
              ],
              "type": "label",
            },
            Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <input
                    checked={true}
                    onChange={[Function]}
                    type="radio"
                    value="rating"
                  />,
                  "rating",
                ],
                "className": "link link-primary",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": null,
                  "nodeType": "host",
                  "props": Object {
                    "checked": true,
                    "onChange": [Function],
                    "type": "radio",
                    "value": "rating",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "input",
                },
                "rating",
              ],
              "type": "label",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="container"
        >
          <div
            className="count"
          >
            20
             
            movies
             found
          </div>
          <div
            className="sort"
          >
            <span
              className="sortBy"
            >
              Sort by
            </span>
            <label
              className="link link-default"
            >
              <input
                checked={false}
                onChange={[Function]}
                type="radio"
                value="date"
              />
              release date
            </label>
            <label
              className="link link-primary"
            >
              <input
                checked={true}
                onChange={[Function]}
                type="radio"
                value="rating"
              />
              rating
            </label>
          </div>
        </div>,
        "id": "status",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="count"
            >
              20
               
              movies
               found
            </div>,
            <div
              className="sort"
            >
              <span
                className="sortBy"
              >
                Sort by
              </span>
              <label
                className="link link-default"
              >
                <input
                  checked={false}
                  onChange={[Function]}
                  type="radio"
                  value="date"
                />
                release date
              </label>
              <label
                className="link link-primary"
              >
                <input
                  checked={true}
                  onChange={[Function]}
                  type="radio"
                  value="rating"
                />
                rating
              </label>
            </div>,
          ],
          "className": "container",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": null,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                20,
                " ",
                "movies",
                " found",
              ],
              "className": "count",
            },
            "ref": null,
            "rendered": Array [
              20,
              " ",
              "movies",
              " found",
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": null,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <span
                  className="sortBy"
                >
                  Sort by
                </span>,
                <label
                  className="link link-default"
                >
                  <input
                    checked={false}
                    onChange={[Function]}
                    type="radio"
                    value="date"
                  />
                  release date
                </label>,
                <label
                  className="link link-primary"
                >
                  <input
                    checked={true}
                    onChange={[Function]}
                    type="radio"
                    value="rating"
                  />
                  rating
                </label>,
              ],
              "className": "sort",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "children": "Sort by",
                  "className": "sortBy",
                },
                "ref": null,
                "rendered": "Sort by",
                "type": "span",
              },
              Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <input
                      checked={false}
                      onChange={[Function]}
                      type="radio"
                      value="date"
                    />,
                    "release date",
                  ],
                  "className": "link link-default",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": null,
                    "nodeType": "host",
                    "props": Object {
                      "checked": false,
                      "onChange": [Function],
                      "type": "radio",
                      "value": "date",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "input",
                  },
                  "release date",
                ],
                "type": "label",
              },
              Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <input
                      checked={true}
                      onChange={[Function]}
                      type="radio"
                      value="rating"
                    />,
                    "rating",
                  ],
                  "className": "link link-primary",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": null,
                    "nodeType": "host",
                    "props": Object {
                      "checked": true,
                      "onChange": [Function],
                      "type": "radio",
                      "value": "rating",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "input",
                  },
                  "rating",
                ],
                "type": "label",
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Status renders correctly with empty results 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Status
    count={0}
    handleSort={[Function]}
    match={
      Object {
        "params": Object {
          "id": "680",
        },
        "url": "/film/680",
      }
    }
    searchType="title"
    sortType=""
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "host",
    "props": Object {
      "children": null,
      "id": "status",
    },
    "ref": null,
    "rendered": null,
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": null,
        "id": "status",
      },
      "ref": null,
      "rendered": null,
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Status renders correctly with props 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Status
    count={20}
    handleSort={[Function]}
    match={
      Object {
        "params": Object {
          "id": "680",
        },
        "url": "/film/680",
      }
    }
    searchType="title"
    sortType=""
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="container"
      >
        <div
          className="count"
        >
          20
           
          movies
           found
        </div>
        <div
          className="sort"
        >
          <span
            className="sortBy"
          >
            Sort by
          </span>
          <label
            className="link link-default"
          >
            <input
              checked={false}
              onChange={[Function]}
              type="radio"
              value="date"
            />
            release date
          </label>
          <label
            className="link link-default"
          >
            <input
              checked={false}
              onChange={[Function]}
              type="radio"
              value="rating"
            />
            rating
          </label>
        </div>
      </div>,
      "id": "status",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="count"
          >
            20
             
            movies
             found
          </div>,
          <div
            className="sort"
          >
            <span
              className="sortBy"
            >
              Sort by
            </span>
            <label
              className="link link-default"
            >
              <input
                checked={false}
                onChange={[Function]}
                type="radio"
                value="date"
              />
              release date
            </label>
            <label
              className="link link-default"
            >
              <input
                checked={false}
                onChange={[Function]}
                type="radio"
                value="rating"
              />
              rating
            </label>
          </div>,
        ],
        "className": "container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              20,
              " ",
              "movies",
              " found",
            ],
            "className": "count",
          },
          "ref": null,
          "rendered": Array [
            20,
            " ",
            "movies",
            " found",
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <span
                className="sortBy"
              >
                Sort by
              </span>,
              <label
                className="link link-default"
              >
                <input
                  checked={false}
                  onChange={[Function]}
                  type="radio"
                  value="date"
                />
                release date
              </label>,
              <label
                className="link link-default"
              >
                <input
                  checked={false}
                  onChange={[Function]}
                  type="radio"
                  value="rating"
                />
                rating
              </label>,
            ],
            "className": "sort",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": "Sort by",
                "className": "sortBy",
              },
              "ref": null,
              "rendered": "Sort by",
              "type": "span",
            },
            Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <input
                    checked={false}
                    onChange={[Function]}
                    type="radio"
                    value="date"
                  />,
                  "release date",
                ],
                "className": "link link-default",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": null,
                  "nodeType": "host",
                  "props": Object {
                    "checked": false,
                    "onChange": [Function],
                    "type": "radio",
                    "value": "date",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "input",
                },
                "release date",
              ],
              "type": "label",
            },
            Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <input
                    checked={false}
                    onChange={[Function]}
                    type="radio"
                    value="rating"
                  />,
                  "rating",
                ],
                "className": "link link-default",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": null,
                  "nodeType": "host",
                  "props": Object {
                    "checked": false,
                    "onChange": [Function],
                    "type": "radio",
                    "value": "rating",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "input",
                },
                "rating",
              ],
              "type": "label",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="container"
        >
          <div
            className="count"
          >
            20
             
            movies
             found
          </div>
          <div
            className="sort"
          >
            <span
              className="sortBy"
            >
              Sort by
            </span>
            <label
              className="link link-default"
            >
              <input
                checked={false}
                onChange={[Function]}
                type="radio"
                value="date"
              />
              release date
            </label>
            <label
              className="link link-default"
            >
              <input
                checked={false}
                onChange={[Function]}
                type="radio"
                value="rating"
              />
              rating
            </label>
          </div>
        </div>,
        "id": "status",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="count"
            >
              20
               
              movies
               found
            </div>,
            <div
              className="sort"
            >
              <span
                className="sortBy"
              >
                Sort by
              </span>
              <label
                className="link link-default"
              >
                <input
                  checked={false}
                  onChange={[Function]}
                  type="radio"
                  value="date"
                />
                release date
              </label>
              <label
                className="link link-default"
              >
                <input
                  checked={false}
                  onChange={[Function]}
                  type="radio"
                  value="rating"
                />
                rating
              </label>
            </div>,
          ],
          "className": "container",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": null,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                20,
                " ",
                "movies",
                " found",
              ],
              "className": "count",
            },
            "ref": null,
            "rendered": Array [
              20,
              " ",
              "movies",
              " found",
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": null,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <span
                  className="sortBy"
                >
                  Sort by
                </span>,
                <label
                  className="link link-default"
                >
                  <input
                    checked={false}
                    onChange={[Function]}
                    type="radio"
                    value="date"
                  />
                  release date
                </label>,
                <label
                  className="link link-default"
                >
                  <input
                    checked={false}
                    onChange={[Function]}
                    type="radio"
                    value="rating"
                  />
                  rating
                </label>,
              ],
              "className": "sort",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "children": "Sort by",
                  "className": "sortBy",
                },
                "ref": null,
                "rendered": "Sort by",
                "type": "span",
              },
              Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <input
                      checked={false}
                      onChange={[Function]}
                      type="radio"
                      value="date"
                    />,
                    "release date",
                  ],
                  "className": "link link-default",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": null,
                    "nodeType": "host",
                    "props": Object {
                      "checked": false,
                      "onChange": [Function],
                      "type": "radio",
                      "value": "date",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "input",
                  },
                  "release date",
                ],
                "type": "label",
              },
              Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <input
                      checked={false}
                      onChange={[Function]}
                      type="radio"
                      value="rating"
                    />,
                    "rating",
                  ],
                  "className": "link link-default",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": null,
                    "nodeType": "host",
                    "props": Object {
                      "checked": false,
                      "onChange": [Function],
                      "type": "radio",
                      "value": "rating",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "input",
                  },
                  "rating",
                ],
                "type": "label",
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Status renders correctly with sorting type 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Status
    count={20}
    handleSort={[Function]}
    match={
      Object {
        "params": Object {
          "id": "680",
        },
        "url": "/film/680",
      }
    }
    searchType="title"
    sortType="date"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="container"
      >
        <div
          className="count"
        >
          20
           
          movies
           found
        </div>
        <div
          className="sort"
        >
          <span
            className="sortBy"
          >
            Sort by
          </span>
          <label
            className="link link-primary"
          >
            <input
              checked={true}
              onChange={[Function]}
              type="radio"
              value="date"
            />
            release date
          </label>
          <label
            className="link link-default"
          >
            <input
              checked={false}
              onChange={[Function]}
              type="radio"
              value="rating"
            />
            rating
          </label>
        </div>
      </div>,
      "id": "status",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="count"
          >
            20
             
            movies
             found
          </div>,
          <div
            className="sort"
          >
            <span
              className="sortBy"
            >
              Sort by
            </span>
            <label
              className="link link-primary"
            >
              <input
                checked={true}
                onChange={[Function]}
                type="radio"
                value="date"
              />
              release date
            </label>
            <label
              className="link link-default"
            >
              <input
                checked={false}
                onChange={[Function]}
                type="radio"
                value="rating"
              />
              rating
            </label>
          </div>,
        ],
        "className": "container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              20,
              " ",
              "movies",
              " found",
            ],
            "className": "count",
          },
          "ref": null,
          "rendered": Array [
            20,
            " ",
            "movies",
            " found",
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <span
                className="sortBy"
              >
                Sort by
              </span>,
              <label
                className="link link-primary"
              >
                <input
                  checked={true}
                  onChange={[Function]}
                  type="radio"
                  value="date"
                />
                release date
              </label>,
              <label
                className="link link-default"
              >
                <input
                  checked={false}
                  onChange={[Function]}
                  type="radio"
                  value="rating"
                />
                rating
              </label>,
            ],
            "className": "sort",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": "Sort by",
                "className": "sortBy",
              },
              "ref": null,
              "rendered": "Sort by",
              "type": "span",
            },
            Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <input
                    checked={true}
                    onChange={[Function]}
                    type="radio"
                    value="date"
                  />,
                  "release date",
                ],
                "className": "link link-primary",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": null,
                  "nodeType": "host",
                  "props": Object {
                    "checked": true,
                    "onChange": [Function],
                    "type": "radio",
                    "value": "date",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "input",
                },
                "release date",
              ],
              "type": "label",
            },
            Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <input
                    checked={false}
                    onChange={[Function]}
                    type="radio"
                    value="rating"
                  />,
                  "rating",
                ],
                "className": "link link-default",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": null,
                  "nodeType": "host",
                  "props": Object {
                    "checked": false,
                    "onChange": [Function],
                    "type": "radio",
                    "value": "rating",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "input",
                },
                "rating",
              ],
              "type": "label",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="container"
        >
          <div
            className="count"
          >
            20
             
            movies
             found
          </div>
          <div
            className="sort"
          >
            <span
              className="sortBy"
            >
              Sort by
            </span>
            <label
              className="link link-primary"
            >
              <input
                checked={true}
                onChange={[Function]}
                type="radio"
                value="date"
              />
              release date
            </label>
            <label
              className="link link-default"
            >
              <input
                checked={false}
                onChange={[Function]}
                type="radio"
                value="rating"
              />
              rating
            </label>
          </div>
        </div>,
        "id": "status",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="count"
            >
              20
               
              movies
               found
            </div>,
            <div
              className="sort"
            >
              <span
                className="sortBy"
              >
                Sort by
              </span>
              <label
                className="link link-primary"
              >
                <input
                  checked={true}
                  onChange={[Function]}
                  type="radio"
                  value="date"
                />
                release date
              </label>
              <label
                className="link link-default"
              >
                <input
                  checked={false}
                  onChange={[Function]}
                  type="radio"
                  value="rating"
                />
                rating
              </label>
            </div>,
          ],
          "className": "container",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": null,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                20,
                " ",
                "movies",
                " found",
              ],
              "className": "count",
            },
            "ref": null,
            "rendered": Array [
              20,
              " ",
              "movies",
              " found",
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": null,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <span
                  className="sortBy"
                >
                  Sort by
                </span>,
                <label
                  className="link link-primary"
                >
                  <input
                    checked={true}
                    onChange={[Function]}
                    type="radio"
                    value="date"
                  />
                  release date
                </label>,
                <label
                  className="link link-default"
                >
                  <input
                    checked={false}
                    onChange={[Function]}
                    type="radio"
                    value="rating"
                  />
                  rating
                </label>,
              ],
              "className": "sort",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "children": "Sort by",
                  "className": "sortBy",
                },
                "ref": null,
                "rendered": "Sort by",
                "type": "span",
              },
              Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <input
                      checked={true}
                      onChange={[Function]}
                      type="radio"
                      value="date"
                    />,
                    "release date",
                  ],
                  "className": "link link-primary",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": null,
                    "nodeType": "host",
                    "props": Object {
                      "checked": true,
                      "onChange": [Function],
                      "type": "radio",
                      "value": "date",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "input",
                  },
                  "release date",
                ],
                "type": "label",
              },
              Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <input
                      checked={false}
                      onChange={[Function]}
                      type="radio"
                      value="rating"
                    />,
                    "rating",
                  ],
                  "className": "link link-default",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": null,
                    "nodeType": "host",
                    "props": Object {
                      "checked": false,
                      "onChange": [Function],
                      "type": "radio",
                      "value": "rating",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "input",
                  },
                  "rating",
                ],
                "type": "label",
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
